# vantrace

./: .gitignore  LICENSE  README.md  fake_checkpoint.pt  live_test.py  real_test.py  smallcnn_final.pt  sweep_test.py  test_model.txt  test_run.py
docs/: roadmap.md
vantrace-dashboard/: index.html  package-lock.json  package.json
vantrace-dashboard/src/: App.tsx  Leaderboard.tsx  Lineage.tsx  Registry.tsx  RunDetail.tsx  RunsTable.tsx  Workspace.tsx  colors.ts  index.css  main.tsx
vantrace-sdk/: pyproject.toml
vantrace-sdk/src/vantrace/: __init__.py  cli.py  sweep.py
vantrace-server/: artifacts.go  db.go  go.mod  handlers.go  main.go  registry.go  storage.go
