[project]
name = "vantrace"
version = "0.3.0"
description = "Local-first, open-source ML experiment tracking SDK"
requires-python = ">=3.10"
dependencies = ["requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vantrace"]


[project.scripts]
vantrace = "vantrace.cli:main"